[project]
name = "hello_flow"
version = "0.1.0"
description = "hello_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
]

[project.scripts]
kickoff = "hello_flow.main:kickoff"
plot = "hello_flow.main:plot"
run_crew = "hello_flow.main:kickoff"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
